@@ -1,5 +1,11 @@
 2004-08-06  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-file.c:
+	* gedit-utils.c: substitute eel_make_uri_canonical with
+	gnome_vfs_make_uri_canonical.
+
+2004-08-06  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit-file.c (gedit_file_revert): don't leak uri.
 
 2004-08-05  Paolo Borelli  <pborelli@katamail.com>
